src/test/ui/borrowck/borrowck-move-out-of-overloaded-deref.stderr
error[E0507]: cannot move out of an `Rc`
  --> $DIR/borrowck-move-out-of-overloaded-deref.rs:4:14
   |
LL |     let _x = *Rc::new("hi".to_string());
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              move occurs because value has type `std::string::String`, which does not implement the `Copy` trait
   |              help: consider borrowing here: `&*Rc::new("hi".to_string())`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
